creating fact implemented, updating fact WIP
