# internal-api/api/facts_api.go
@@ -2,11 +2,12 @@ package api
 
 import (
 	"fmt"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 	"net/http"
 
+	"go.mongodb.org/mongo-driver/bson/primitive"
+
 	"github.com/labstack/echo/v4"
-	"github.com/swaggo/echo-swagger"
+	echoSwagger "github.com/swaggo/echo-swagger"
 
 	_ "github.com/cafo13/animal-facts/internal-api/docs"
 	"github.com/cafo13/animal-facts/internal-api/handler"
@@ -16,6 +17,10 @@ import (
 var (
 	basePathV1 = "api/v1"
 )
+
+type CreateFactResult struct {
+	Id string `json:"id"`
+}
 
 type CreateUpdateFact struct {
 	Fact     string `json:"fact"`
@@ -50,22 +55,22 @@ func (f *FactsApi) SetupRoutes() {
 		{
 			Method:      "GET",
 			Path:        "/health",
-			HandlerFunc: f.GetHealth,
+			HandlerFunc: f.getHealth,
 		},
 		{
 			Method:      "POST",
 			Path:        fmt.Sprintf("/%s/facts", basePathV1),
-			HandlerFunc: f.CreateFact,
+			HandlerFunc: f.createFact,
 		},
 		{
 			Method:      "PUT",
 			Path:        fmt.Sprintf("%s/facts/:id", basePathV1),
-			HandlerFunc: f.UpdateFact,
+			HandlerFunc: f.updateFact,
 		},
 		{
 			Method:      "DELETE",
 			Path:        fmt.Sprintf("%s/facts/:id", basePathV1),
-			HandlerFunc: f.DeleteFact,
+			HandlerFunc: f.deleteFact,
 		},
 	}
 }
@@ -74,29 +79,30 @@ func (f *FactsApi) GetRoutes() []router.Route {
 	return f.factsApiRoutes
 }
 
-func (f *FactsApi) GetHealth(c echo.Context) error {
+func (f *FactsApi) getHealth(c echo.Context) error {
 	// TODO check database connection for health check and maybe other connections?
 	return c.String(http.StatusOK, "Healthy")
 }
 
-// CreateFact
+// createFact
 //
 //	@Summary      create fact
 //	@Description  create a new fact
 //	@Produce      json
 //	@Param        request body CreateUpdateFact true "fact"
-//	@Success      201  {string}  "fact created"
+//	@Success      201  {object}  CreateFactResult
 //	@Failure      400  {object}  ErrorResult
 //	@Failure      500  {object}  ErrorResult
 //	@Router       /facts [post]
-func (f *FactsApi) CreateFact(c echo.Context) error {
+func (f *FactsApi) createFact(c echo.Context) error {
 	fact := &CreateUpdateFact{}
 	if err := c.Bind(fact); err != nil {
 		return c.JSON(http.StatusBadRequest, ErrorResult{Error: err.Error()})
 	}
 
+	id := primitive.NewObjectID()
 	err := f.factsHandler.Create(&handler.Fact{
-		ID:       primitive.NewObjectID(),
+		ID:       id,
 		Fact:     fact.Fact,
 		Source:   fact.Source,
 		Approved: fact.Approved,
@@ -106,10 +112,11 @@ func (f *FactsApi) CreateFact(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, ErrorResult{Error: err.Error()})
 	}
 
-	return c.String(http.StatusCreated, "fact created")
+	t := id.Hex()
+	return c.JSON(http.StatusCreated, CreateFactResult{Id: t})
 }
 
-// UpdateFact
+// updateFact
 //
 //	@Summary      update fact
 //	@Description  update an existing fact
@@ -119,7 +126,7 @@ func (f *FactsApi) CreateFact(c echo.Context) error {
 //	@Failure      400  {object}  ErrorResult
 //	@Failure      500  {object}  ErrorResult
 //	@Router       /facts/:id [put]
-func (f *FactsApi) UpdateFact(c echo.Context) error {
+func (f *FactsApi) updateFact(c echo.Context) error {
 	id := c.Param("id")
 	objID, err := primitive.ObjectIDFromHex(id)
 	if err != nil {
@@ -145,7 +152,7 @@ func (f *FactsApi) UpdateFact(c echo.Context) error {
 	return c.String(http.StatusOK, "fact updated")
 }
 
-// DeleteFact
+// deleteFact
 //
 //	@Summary      delete fact
 //	@Description  delete an existing fact
@@ -153,7 +160,7 @@ func (f *FactsApi) UpdateFact(c echo.Context) error {
 //	@Success      200  {string}  "fact deleted"
 //	@Failure      500  {object}  ErrorResult
 //	@Router       /facts/:id [delete]
-func (f *FactsApi) DeleteFact(c echo.Context) error {
+func (f *FactsApi) deleteFact(c echo.Context) error {
 	id := c.Param("id")
 	objID, err := primitive.ObjectIDFromHex(id)
 	if err != nil {
