# internal-api/docs/swagger.json
@@ -33,9 +33,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "fact created",
+                        "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.CreateFactResult"
                         }
                     },
                     "400": {
@@ -116,6 +116,14 @@
         }
     },
     "definitions": {
+        "api.CreateFactResult": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "api.CreateUpdateFact": {
             "type": "object",
             "properties": {
